# Agentic-AI---Financial-Data-Analyst

./: README.md  pyproject.toml  report.md  src.rar
src/hassan/: a.py  crew.py  main.py
src/hassan/config/: agents.yaml  tasks.yaml
src/hassan/tools/: a.py
